--- a/views/curriculum.html
+++ b/views/curriculum.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="..img/alvaro.png">
     <link rel="stylesheet" href="../styles/style.css">
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Mi Cv</title>
-    
+
 </head>
 
 <body>
@@ -27,23 +29,29 @@
         </div>
     </header>
 
-   <main>
+    <main>
 
-    <div class="main-top">
-        <div class="text-top">
-            <h1>Baja mi curriculum</h1>
-            <h2> <a href="../files/CV - Alvaro Sopeña Figueroa - es.pdf"download="Cv Alvaro Sopeña Figueroa"> Haciendo click acá!</a></h2>
+        <div class="main-top">
+            <div class="hero">
+                <img src="../img/line.jpg" id=cvhero alt="foto cv">
+            </div>
+            <div class="text-top">
+                <h1>Baja mi curriculum</h1>
+                <h2> <a href="../files/CV - Alvaro Sopeña Figueroa - es.pdf" download="Cv Alvaro Sopeña Figueroa">
+                        Haciendo click acá!</a></h2>
+            </div>
         </div>
-        <div class="hero">
-            <img src="../img/alvaro.png" id=imghero class=imghero alt="foto Alvaro">
+    </main>
+
+    <footer>
+        <div class="social-buttons">
+            <a href="https://www.linkedin.com/in/alvaro-sopena-figueroa/" class="fa fa-linkedin" target="_blank"></a>
+            <a href="https://instagram.com/alvarosopena" class="fa fa-instagram" target="_blank"></a>
+            <a href="https://mailto:alvarosopenaf@gmail.com" class="fa fa-envelope" target="_blank"></a>
+            <a href=" https://wa.me/+5492614668479" class="fa fa-whatsapp" target="_blank"></a>
         </div>
-    </div>
-
-   </main>
-
-   <footer>
-    <p>Made with love @ Alvaro Sopeña Figueroa</p>
-</footer>
+        <p>Made with love @ Alvaro Sopeña Figueroa</p>
+    </footer>
 </body>
 
 </html>
