--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="..img/alvaro.png">
     <link rel="stylesheet" href="../styles/style.css">
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Mis proyectos</title>
-   
+
 </head>
 
 <body>
@@ -31,10 +33,19 @@
         <div class="main-top">
             <h2>Mis proyectos!</h2>
         </div>
-        <div style='position:relative; padding-bottom:calc(76.67% + 44px)'><iframe src='https://gfycat.com/ifr/InsignificantFilthyAdeliepenguin' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div><p> <a href="https://gfycat.com/insignificantfilthyadeliepenguin"></a></p>
+        <div style='position:relative; padding-bottom:calc(76.67% + 44px)'><iframe
+                src='https://gfycat.com/ifr/InsignificantFilthyAdeliepenguin' frameborder='0' scrolling='no'
+                width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
+        <p> <a href="https://gfycat.com/insignificantfilthyadeliepenguin"></a></p>
     </main>
 
     <footer>
+        <div class="social-buttons">
+            <a href="https://www.linkedin.com/in/alvaro-sopena-figueroa/" class="fa fa-linkedin" target="_blank"></a>
+            <a href="https://instagram.com/alvarosopena" class="fa fa-instagram" target="_blank"></a>
+            <a href="https://mailto:alvarosopenaf@gmail.com" class="fa fa-envelope" target="_blank"></a>
+            <a href=" https://wa.me/+5492614668479" class="fa fa-whatsapp" target="_blank"></a>
+        </div>
         <p>Made with love @ Alvaro Sopeña Figueroa</p>
     </footer>
 </body>
