--- a/views/contacto.html
+++ b/views/contacto.html
@@ -44,6 +44,9 @@
                 <label for="mail">Mail:</label>
                 <input class="input" type="mail" name="mail" placeholder="ejemplo@ejemplo.com" id="mail">
 
+                <label for="tel">Teléfono:</label>
+                <input class="input" type="tel" name="tel">
+
                 <label for="fecha">Fecha:</label>
                 <input class="input" type="date" name="date" id="fecha">
 
