--- a/styles/style.css
+++ b/styles/style.css
@@ -27,8 +27,11 @@ body {
   font-family: "Poiret One", Arial, Helvetica, sans-serif;
   height: 100%;
   margin: 0;
-  padding: 0;
-  padding-bottom: 10px;
+  
+}
+/* para que el header no tape el body */
+.container{
+  padding-top:80px
 }
 
 .top-nav {
@@ -39,6 +42,8 @@ body {
   background-color: #171718;
   justify-content: space-between;
   height: 80px;
+  width: 100%;
+  position: fixed;
 }
 
 .logo {
@@ -47,19 +52,17 @@ body {
 }
 
 nav ul {
-  display: flex;
-  flex-direction: row;
 }
 
 nav ul li {
   margin-left: 5px;
   margin-right: 5px;
+  display: inline-block;
 }
 
 nav ul li a,
 .logo {
   color: #cccccc;
-  display: block;
   font-size: large;
 }
 
@@ -118,24 +121,39 @@ h2 {
   height: 100px;
   width: auto;
   /*  border-width:0; */
-  color: #000;
-  border-left: 2px solid #9fa3a9;
-  padding: 12px;
+  border: 1px solid #9fa3a9;
+  margin: 10px;
 }
 
 /* About */
-body > main > div.main-top.about > div.text-top.about{
+body > main > div.main-top.about > div.text-top.about {
   display: flex;
   justify-content: space-around;
- 
 }
 
 .main-top.about {
   background-image: url(../img/milky.jpg);
   background-size: cover;
-
 }
 
+@media only screen and (max-width: 600px) {
+  .text-top  {
+    margin: auto;
+  }
+}
+
+
+/* CV */
+
+@media only screen and (max-width: 600px) {
+  #cvhero {
+    width: 100%;
+    height: 100%;
+  }
+  .cv {
+    flex-wrap: wrap;
+  }
+}
 
 /* FORM */
 
@@ -186,13 +204,11 @@ footer p {
   width: 50px;
   text-align: center;
   text-decoration: none;
-  color:#6a6e73
-
+  color: #6a6e73;
 }
 
 .fa:hover {
   opacity: 0.7;
- 
 }
 
 /* Colores */
