--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -29,20 +29,25 @@
     </header>
 
     <main>
-        <div class="main-top about">
-            <div class="text-top about">
-                <h1>Sobre mi </h1>
+        <div class="container">
+            <div class="main-top about">
+                <div class="text-top about">
+                    <h1>Sobre mi </h1>
+                </div>
             </div>
-        </div>
-        <div class="info">
-            <p>Soy de Mendoza, Argentina, tengo 31 años, hace 2 años hice el curso de Desarrollo Web Full Stack en
-                Digital House con una duración 8 meses, maquetado web, HTML, CSS, JS, Nodejs, Express y MySql,
-                utilizando Métodologias Agíles (SCRUM). Ahora estoy comenzando el curso de Desarrollo Frontend con React
-                en Coderhouse, con una duración de 6 meses, finaliza en enero 2024. Y el curso fullstack con NodeJS en
-                Codo a Codo 4.0 que también finaliza en enero de 2024. He hecho algunos cursos en Udemy también pero al
-                ser solo on demand lo cuento como herramientas. También soy freelancer en proyectos con Worpdress en
-                Agencia Waiu, de Mendoza. Estoy recibido de Tec. Sup. En Comercio Internacional y Aduana.</p>
+            <div class="info">
+                <p>Soy de Mendoza, Argentina, tengo 31 años, hace 2 años hice el curso de Desarrollo Web Full Stack en
+                    Digital House con una duración 8 meses, maquetado web, HTML, CSS, JS, Nodejs, Express y MySql,
+                    utilizando Métodologias Agíles (SCRUM). Ahora estoy comenzando el curso de Desarrollo Frontend con
+                    React
+                    en Coderhouse, con una duración de 6 meses, finaliza en enero 2024. Y el curso fullstack con NodeJS
+                    en
+                    Codo a Codo 4.0 que también finaliza en enero de 2024. He hecho algunos cursos en Udemy también pero
+                    al
+                    ser solo on demand lo cuento como herramientas. También soy freelancer en proyectos con Worpdress en
+                    Agencia Waiu, de Mendoza. Estoy recibido de Tec. Sup. En Comercio Internacional y Aduana.</p>
 
+            </div>
         </div>
     </main>
 
