--- a/views/contacto.html
+++ b/views/contacto.html
@@ -30,40 +30,42 @@
     </header>
 
     <main>
-        <!-- Etiqueta form -->
-        <div class="main-top">
-            <h2>Contactame acá!</h2>
-        </div>
-        <div class="info">
-            <form action="">
+        <div class="container">
+            <!-- Etiqueta form -->
+            <div class="main-top">
+                <h2>Contactame acá!</h2>
+            </div>
+            <div class="info">
+                <form action="">
 
-                <!-- label igual a id para "conectarlo" -->
-                <label for="nombre">Nombre o Compañía:</label>
-                <input class="input" type="name" name="name" id="nombre">
+                    <!-- label igual a id para "conectarlo" -->
+                    <label for="nombre">Nombre o Compañía:</label>
+                    <input class="input" type="name" name="name" id="nombre">
 
-                <label for="mail">Mail:</label>
-                <input class="input" type="mail" name="mail" placeholder="ejemplo@ejemplo.com" id="mail">
+                    <label for="mail">Mail:</label>
+                    <input class="input" type="mail" name="mail" placeholder="ejemplo@ejemplo.com" id="mail">
 
-                <label for="tel">Teléfono:</label>
-                <input class="input" type="tel" name="tel">
+                    <label for="tel">Teléfono:</label>
+                    <input class="input" type="tel" name="tel">
 
-                <label for="fecha">Fecha:</label>
-                <input class="input" type="date" name="date" id="fecha">
+                    <label for="fecha">Fecha:</label>
+                    <input class="input" type="date" name="date" id="fecha">
 
-                <label for="lenguaje">Lenguaje:</label>
-                <select name="lenguaje" id="lenguaje">
-                    <option value="js">Javascript(Frontend)</option>
-                    <option value="nd">Node(Backend)</option>
-                    <option value="fs">Fullstack</option>
-                    <option value="wp">Wordpress</option>
-                </select>
-                <br>
-                <label for="msj">Tu mensaje:</label>
-                <textarea name="" id="msj" cols="30" rows="10" placeholder="Escribime tu mensaje"></textarea>
+                    <label for="lenguaje">Lenguaje:</label>
+                    <select name="lenguaje" id="lenguaje">
+                        <option value="js">Javascript(Frontend)</option>
+                        <option value="nd">Node(Backend)</option>
+                        <option value="fs">Fullstack</option>
+                        <option value="wp">Wordpress</option>
+                    </select>
+                    <br>
+                    <label for="msj">Tu mensaje:</label>
+                    <textarea name="" id="msj" cols="30" rows="10" placeholder="Escribime tu mensaje"></textarea>
 
-                <input class="input" type="submit">
-                <input class="input" type="reset" value="Borrar">
-            </form>
+                    <input class="input" type="submit">
+                    <input class="input" type="reset" value="Borrar">
+                </form>
+            </div>
         </div>
     </main>
 
