--- a/views/curriculum.html
+++ b/views/curriculum.html
@@ -30,15 +30,16 @@
     </header>
 
     <main>
-
-        <div class="main-top">
-            <div class="hero">
-                <img src="../img/line.jpg" id=cvhero alt="foto cv">
-            </div>
-            <div class="text-top">
-                <h1>Baja mi curriculum</h1>
-                <h2> <a href="../files/CV - Alvaro Sopeña Figueroa - es.pdf" download="Cv Alvaro Sopeña Figueroa">
-                        Haciendo click acá!</a></h2>
+        <div class="container">
+            <div class="main-top cv">
+                <div class="hero">
+                    <img src="../img/line.jpg" id=cvhero alt="foto cv">
+                </div>
+                <div class="text-top">
+                    <h1>Baja mi curriculum</h1>
+                    <h2> <a href="../files/CV - Alvaro Sopeña Figueroa - es.pdf" download="Cv Alvaro Sopeña Figueroa">
+                            Haciendo click acá!</a></h2>
+                </div>
             </div>
         </div>
     </main>
