--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -30,13 +30,15 @@
     </header>
 
     <main>
-        <div class="main-top">
-            <h2>Mis proyectos!</h2>
+        <div class="container">
+            <div class="main-top">
+                <h2>Mis proyectos!</h2>
+            </div>
+            <div style='position:relative; padding-bottom:calc(76.67% + 44px)'><iframe
+                    src='https://gfycat.com/ifr/InsignificantFilthyAdeliepenguin' frameborder='0' scrolling='no'
+                    width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
+            <p> <a href="https://gfycat.com/insignificantfilthyadeliepenguin"></a></p>
         </div>
-        <div style='position:relative; padding-bottom:calc(76.67% + 44px)'><iframe
-                src='https://gfycat.com/ifr/InsignificantFilthyAdeliepenguin' frameborder='0' scrolling='no'
-                width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
-        <p> <a href="https://gfycat.com/insignificantfilthyadeliepenguin"></a></p>
     </main>
 
     <footer>
